refactor mapper to get list of BookDto from iterable of Book